--- a/my-pixel.html
+++ b/my-pixel.html
@@ -150,6 +150,107 @@
                                             px
                                         </div>
                                     </a>
+                                    <a href="#" class="my-pixel-inner modal-btn" data-modal=".my-pixel-modal">
+                                        <div class="my-pixel-inner-img">
+                                            <img src="img/pixel-img1.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-icon">
+                                            <img src="img/icon-location.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-number">
+                                            172,86
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            Size
+                                        </div>
+                                        <div class="my-pixel-inner-block">
+                                            10 <span><img src="img/x.svg" alt=""></span> 10
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            px
+                                        </div>
+                                    </a>
+                                    <a href="#" class="my-pixel-inner modal-btn" data-modal=".my-pixel-modal">
+                                        <div class="my-pixel-inner-img">
+                                            <img src="img/pixel-img2.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-icon">
+                                            <img src="img/icon-location.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-number">
+                                            11,65
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            Size
+                                        </div>
+                                        <div class="my-pixel-inner-block">
+                                            5 <span><img src="img/x.svg" alt=""></span> 10
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            px
+                                        </div>
+                                    </a>
+                                    <a href="#" class="my-pixel-inner modal-btn" data-modal=".my-pixel-modal">
+                                        <div class="my-pixel-inner-img">
+                                            <img src="img/pixel-img3.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-icon">
+                                            <img src="img/icon-location.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-number">
+                                            232,45
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            Size
+                                        </div>
+                                        <div class="my-pixel-inner-block">
+                                            20 <span><img src="img/x.svg" alt=""></span> 20
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            px
+                                        </div>
+                                    </a>
+                                    <a href="#" class="my-pixel-inner modal-btn" data-modal=".my-pixel-modal">
+                                        <div class="my-pixel-inner-img">
+                                            <img src="img/pixel-img4.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-icon">
+                                            <img src="img/icon-location.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-number">
+                                            72,86
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            Size
+                                        </div>
+                                        <div class="my-pixel-inner-block">
+                                            10 <span><img src="img/x.svg" alt=""></span> 10
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            px
+                                        </div>
+                                    </a>
+                                    <a href="#" class="my-pixel-inner modal-btn" data-modal=".my-pixel-modal">
+                                        <div class="my-pixel-inner-img">
+                                            <img src="img/pixel-img5.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-icon">
+                                            <img src="img/icon-location.svg" alt="">
+                                        </div>
+                                        <div class="my-pixel-inner-number">
+                                            172,12
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            Size
+                                        </div>
+                                        <div class="my-pixel-inner-block">
+                                            5 <span><img src="img/x.svg" alt=""></span> 5
+                                        </div>
+                                        <div class="my-pixel-inner-text">
+                                            px
+                                        </div>
+                                    </a>
+
                                 </div>
                                 <div class="my-pixel-tab-content-item">
                                     2
