--- a/rating-city.html
+++ b/rating-city.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="rating-city-content content-dafault">
-            <div class="rating-city-content-scroll">
+
                 <a href="#" class="rating-city-content-item">
                     <div class="rating-city-content-item-icon">
                         <img src="img/top1.svg" alt="">
@@ -253,7 +253,211 @@
                         <img src="img/right-pointer.svg" alt="">
                     </div>
                 </a>
-            </div>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top1.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            Durov'e
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2555
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        29
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top2.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            TON
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2413
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        25
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top3.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            AlexMonstr
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2423
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        19
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top1.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            Durov'e
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2555
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        29
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top2.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            TON
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2413
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        25
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+                <a href="#" class="rating-city-content-item">
+                    <div class="rating-city-content-item-icon">
+                        <img src="img/top3.svg" alt="">
+                    </div>
+                    <div class="rating-city-content-item-more">
+                        <p class="rating-city-content-item-more-title">
+                            AlexMonstr
+                        </p>
+                        <div class="rating-city-content-item-more-row">
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-block">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        2423
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="rating-city-content-item-more-row-item">
+                                <div class="rating-city-content-item-more-inner">
+                                    <div class="rating-city-content-item-more-inner-icon">
+                                        <img src="img/icon-user.svg" alt="">
+                                    </div>
+                                    <div class="rating-city-content-item-more-inner-title">
+                                        19
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating-city-content-item-arrow">
+                        <img src="img/right-pointer.svg" alt="">
+                    </div>
+                </a>
+
             <div class="default-block rating-city-content-your-default">
                 <a href="#" class="default-block-item rating-city-content-your">
                     <div class="rating-city-content-your-rank">
