--- a/rating.html
+++ b/rating.html
@@ -219,6 +219,126 @@
                                     </div>
                                 </div>
                             </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    609.9 K
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                         <div class="default-block rating-content-your">
                             <a href="#" class="default-block-item city-content-inner">
@@ -250,6 +370,126 @@
                 <div class="my-pixel-switch-content-item">
                     <div class="rating-content content-dafault">
                         <div class="rating-content-container">
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    609.9 K
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava1.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava2.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="#" class="city-content-inner">
+                                <div class="city-content-inner-icon">
+                                    <img src="img/top3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-avatar">
+                                    <img src="img/city-ava3.svg" alt="">
+                                </div>
+                                <div class="city-content-inner-more">
+                                    <p class="city-content-inner-more-title">
+                                        1.041 B
+                                    </p>
+                                    <div class="city-content-inner-more-row">
+                                        <div class="city-content-inner-more-row-icon">
+                                        </div>
+                                        <div class="city-content-inner-more-row-title">
+                                            12345 pixels
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
                             <a href="#" class="city-content-inner">
                                 <div class="city-content-inner-icon">
                                     <img src="img/top1.svg" alt="">
